# pepdata

./: .gitignore  .travis.yaml  .travis.yml  MANIFEST.in  README.md  __init__.py  calis.py  deploy.sh  df_tumor_antigens.py  get_data.sh  iedb.py  imma.py  lint.sh  loaders.py  pylintrc  pyproject.toml  reduced_alphabet.py  requirements.txt  setup.py  test.sh  toxin.py
data/: IEDB_TCELL_HUMAN_IMM.txt  IEDB_TCELL_HUMAN_NON.txt  get_data.sh
epitope/: __init__.py  df_tumor_antigens.py  features.py  iedb.py  imma.py  reduced_alphabet.py  toxin.py
epitopes/: __init__.py  amino_acid.py  base.py  calis.py  common.py  cri_tumor_antigens.py  danafarber.py  df.py  df_tumor_antigens.py  download.py  epitope_vectorizer.py  features.py  fritsch_neoepitopes.py  hiv_frahm.py  hpv.py  iedb.py  imma.py  imma2.py  mutate.py  peptide_vectorizer.py  reduced_alphabet.py  reference.py  static_data.py  tantigen.py  tcga.py  tcga_sources.py  toxin.py
pepdata/: __init__.py  amino_acid.py  amino_acid_alphabet.py  amino_acid_properties.py  base.py  blosum.py  calis.py  chou_fasman.py  common.py  cri_tumor_antigens.py  danafarber.py  features.py  fritsch_neoepitopes.py  hiv_frahm.py  hpv.py  iedb.py  imma2.py  peptide_vectorizer.py  pmbec.py  reduced_alphabet.py  reference.py  residue_contact_energies.py  static_data.py  tantigen.py  tcga.py  tcga_sources.py  toxin.py  version.py
test/: test_amino_acids.py  test_calis.py  test_download.py  test_hiv_frahm.py  test_hpv.py  test_iedb.py  test_iedb_alleles.py  test_iedb_mhc.py  test_iedb_tcell.py  test_imma2.py  test_mutate.py  test_ngram.py  (+3 more)
(+40 files in other folders)
